[gd_scene load_steps=5 format=3 uid="uid://s0nrwvacroms"]

[ext_resource type="PackedScene" uid="uid://c4yawuxi2qfpp" path="res://Player/player.tscn" id="1_1vxym"]
[ext_resource type="Script" path="res://Towns/Town.gd" id="1_fltv2"]
[ext_resource type="PackedScene" uid="uid://b462jmyvwcqbu" path="res://Events/Game_Over.tscn" id="2_mbdy4"]
[ext_resource type="PackedScene" uid="uid://c71q0mp78o50d" path="res://Events/Event_Handler.tscn" id="4_8gpw7"]

[node name="Town" type="Node2D"]
script = ExtResource("1_fltv2")

[node name="Player" parent="." instance=ExtResource("1_1vxym")]

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="Name_Label" type="Label" parent="."]
offset_left = 640.0
offset_top = 40.0
offset_right = 696.0
offset_bottom = 66.0
text = "Town 1"

[node name="Shop" type="Button" parent="."]
offset_left = 632.0
offset_top = 648.0
offset_right = 679.0
offset_bottom = 679.0
text = "Shop"

[node name="Jobs" type="Button" parent="."]
offset_left = 800.0
offset_top = 648.0
offset_right = 847.0
offset_bottom = 679.0
text = "Jobs"

[node name="World" type="Button" parent="."]
offset_left = 1104.0
offset_top = 648.0
offset_right = 1204.0
offset_bottom = 679.0
text = "Leave Town"

[node name="Job_List" type="ScrollContainer" parent="."]
visible = false
offset_left = 368.0
offset_top = 72.0
offset_right = 554.0
offset_bottom = 512.0

[node name="VBoxContainer" type="VBoxContainer" parent="Job_List"]
layout_mode = 2

[node name="Job_Offers" type="Node" parent="."]

[node name="Event_Handler" parent="." instance=ExtResource("4_8gpw7")]

[node name="Game_Over" parent="." instance=ExtResource("2_mbdy4")]
visible = false

[connection signal="button_down" from="Shop" to="." method="_on_shop_button_down"]
[connection signal="button_down" from="Jobs" to="." method="_on_jobs_button_down"]
[connection signal="button_down" from="World" to="." method="_on_world_button_down"]
